@@ -15,7 +15,19 @@ public class UserProfileConstants {
 	public static final String USER_NAME = "userName";
 	public static final String DESCRIPTION = "description";
 	public static final String NICK_NAME = "nickName";
-
+	public static final String CN = "cn";
+	public static final String GIVEN_NAME = "givenName";
+	public static final String SN = "sn";
+	public static final String POSTAL_ADDRESS = "postalAddress";
+	public static final String POSTAL_CODE = "postalCode";
+	public static final String POST_OFFICE_BOX = "postOfficeBox";
+	public static final String LOCALITY_NAME = "localityName";
+	public static final String STREET = "street";
+	public static final String JPEG_PHOTO = "jpegPhoto";
+	public static final String LABELED_URL = "labeledURL";
+	public static final String STATE = "st";
+	public static final String TITLE = "title";
+	public static final String TELEPHONE_NUMBER = "telephoneNumber";
 	public static final String EMAIL = "email";
 
 	/**
